# envvar-model-engine

./: .envrc  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  consumer.rs  flake.nix  initdirenv.sh
.github/workflows/: ci.yml  publish-api.yml  publish-crate.yml
api/: README.md  index.json
api/v1/: contract.schema.json  example.json
crates/argenv/: Cargo.toml  README.md
crates/argenv-cli/: Cargo.toml
crates/argenv-cli/src/: main.rs
crates/argenv-cli/tests/: cli.rs
crates/argenv/examples/: consumer.rs
crates/argenv/src/: binding.rs  contract.rs  date.rs  from_raw.rs  input.rs  invocation.rs  lib.rs  lint.rs  record.rs  source.rs  version.rs  vocabulary.rs
crates/argenv/tests/: declaration.rs  document.rs  linting.rs  reading.rs  scenario.rs  schema.rs
crates/argenv/tests/common/: mod.rs
dev/: README.md  conformance.py  flake.nix
src/: lib.rs  main.rs
