[workspace]
resolver = "2"
members = ["crates/argenv", "crates/argenv-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/argenv-opencommons/argenv"
authors = ["argenv-opencommons"]

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
schemars = "0.8.21"
