[package]
name = "argenv-cli"
description = "Emit and check ArgEnv contract documents."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "argenv"
path = "src/main.rs"

[dependencies]
argenv = { path = "../argenv", features = ["contract"] }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
